unpackaged/main/default/objects/Product2/fields/Accounting_Code__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Code__c</fullName>
    <label>Accounting Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>