unpackaged/main/default/objects/Product2/fields/Add_to_B2B_Listview__c.field-meta.xml
<CustomField>
    <fullName>Add_to_B2B_Listview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to B2B Listview</label>
    <type>Checkbox</type>
</CustomField>