unpackaged/main/default/objects/Product2/fields/Agreement_Product__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Product</label>
    <type>Checkbox</type>
</CustomField>