unpackaged/main/default/objects/Product2/fields/Allowed_Quantities__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Quantities__c</fullName>
    <defaultValue>'ALL'</defaultValue>
    <label>Allowed Quantities</label>
    <type>TextArea</type>
</CustomField>