unpackaged/main/default/objects/Product2/fields/Asset_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Code__c</fullName>
    <label>Asset Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>