unpackaged/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>806</fullName>
                <label>3COM</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>ABEL</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>ACER</label>
            </value>
            <value>
                <fullName>216</fullName>
                <label>ACRONIS</label>
            </value>
            <value>
                <fullName>225</fullName>
                <label>ACUMATICA</label>
            </value>
            <value>
                <fullName>401</fullName>
                <label>ADAPTEC</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>ADOBE</label>
            </value>
            <value>
                <fullName>213</fullName>
                <label>AGYSOFT</label>
            </value>
            <value>
                <fullName>029</fullName>
                <label>ALP</label>
            </value>
            <value>
                <fullName>209</fullName>
                <label>ALTARES</label>
            </value>
            <value>
                <fullName>244</fullName>
                <label>AMADEUS</label>
            </value>
            <value>
                <fullName>843</fullName>
                <label>AMPHORA</label>
            </value>
            <value>
                <fullName>242</fullName>
                <label>ARKHINEO</label>
            </value>
            <value>
                <fullName>601</fullName>
                <label>ARKOON</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>ASTECH</label>
            </value>
            <value>
                <fullName>204</fullName>
                <label>AURES</label>
            </value>
            <value>
                <fullName>835</fullName>
                <label>AUTHENTIFICATION</label>
            </value>
            <value>
                <fullName>899</fullName>
                <label>AUTRES</label>
            </value>
            <value>
                <fullName>402</fullName>
                <label>AXIS</label>
            </value>
            <value>
                <fullName>113</fullName>
                <label>AZUR</label>
            </value>
            <value>
                <fullName>750</fullName>
                <label>BELKIN</label>
            </value>
            <value>
                <fullName>202</fullName>
                <label>BEWAN</label>
            </value>
            <value>
                <fullName>349</fullName>
                <label>BGE</label>
            </value>
            <value>
                <fullName>036</fullName>
                <label>BINTEC</label>
            </value>
            <value>
                <fullName>214</fullName>
                <label>BODET SOFTWARE</label>
            </value>
            <value>
                <fullName>231</fullName>
                <label>Bridge</label>
            </value>
            <value>
                <fullName>234</fullName>
                <label>BROADBEAN</label>
            </value>
            <value>
                <fullName>114</fullName>
                <label>BUSINESS OBJECT</label>
            </value>
            <value>
                <fullName>207</fullName>
                <label>C3S</label>
            </value>
            <value>
                <fullName>032</fullName>
                <label>CANON</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>