unpackaged/main/default/objects/Product2/fields/Buying_Metric__c.field-meta.xml
<CustomField>
    <fullName>Buying_Metric__c</fullName>
    <label>Buying Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Metric</valueSetName>
    </valueSet>
</CustomField>