unpackaged/main/default/objects/Product2/fields/Bypass_Flux_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Flux_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Flux Calculation</label>
    <type>Checkbox</type>
</CustomField>