unpackaged/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Activité (niveau 3)</description>
    <label>StructureLevel3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StructureLevel2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>StructureLevel3</valueSetName>
    </valueSet>
</CustomField>