unpackaged/main/default/objects/Product2/fields/Cloned_from_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Cloned_from_Product_ID__c</fullName>
    <label>Cloned from Product ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>