unpackaged/main/default/objects/Product2/fields/Commercial_ID__c.field-meta.xml
<CustomField>
    <fullName>Commercial_ID__c</fullName>
    <description>Catalog reference</description>
    <label>Commercial ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>