unpackaged/main/default/objects/Product2/fields/Commercial_Launch__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Launch__c</fullName>
    <description>Commercial Launch</description>
    <inlineHelpText>Please note, the only event captured by the automation to modify the marketing status of the product in the future is the change from an empty value to a non-empty value.</inlineHelpText>
    <label>Commercial Launch</label>
    <type>Date</type>
</CustomField>