unpackaged/main/default/objects/Product2/fields/Conditions_G_n_rales_de_Vente__c.field-meta.xml
<CustomField>
    <fullName>Conditions_G_n_rales_de_Vente__c</fullName>
    <label>Conditions Générales de Vente</label>
    <type>Url</type>
</CustomField>