unpackaged/main/default/objects/Product2/fields/Consommation_Code__c.field-meta.xml
<CustomField>
    <fullName>Consommation_Code__c</fullName>
    <label>Consommation Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>