unpackaged/main/default/objects/Product2/fields/countermark__c.field-meta.xml
<CustomField>
    <fullName>countermark__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contremarque</description>
    <label>Countermark</label>
    <type>Checkbox</type>
</CustomField>