unpackaged/main/default/objects/Product2/fields/Data_Recovery_Mapping_Code__c.field-meta.xml
<CustomField>
    <fullName>Data_Recovery_Mapping_Code__c</fullName>
    <label>Data Recovery Mapping Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>