unpackaged/main/default/objects/Product2/fields/date_synchro_buyme__c.field-meta.xml
<CustomField>
    <fullName>date_synchro_buyme__c</fullName>
    <label>Date Synchro Buyme</label>
    <type>Date</type>
</CustomField>