unpackaged/main/default/objects/Product2/fields/Declarative_Royalties__c.field-meta.xml
<CustomField>
    <fullName>Declarative_Royalties__c</fullName>
    <label>Declarative Royalties</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>146</fullName>
                <label>146-CARLABELLA RECURRENT</label>
            </value>
            <value>
                <fullName>178</fullName>
                <label>ABBYY</label>
            </value>
            <value>
                <fullName>160</fullName>
                <label>ACL Optim’Fec</label>
            </value>
            <value>
                <fullName>186</fullName>
                <label>ACUMATICA</label>
            </value>
            <value>
                <fullName>129</fullName>
                <label>ALTARES</label>
            </value>
            <value>
                <fullName>119</fullName>
                <label>ALTAVEN RECURRENT</label>
            </value>
            <value>
                <fullName>224</fullName>
                <label>AMADEUS</label>
            </value>
            <value>
                <fullName>219</fullName>
                <label>ARKHINEO</label>
            </value>
            <value>
                <fullName>141</fullName>
                <label>ARKOON RECURRENT</label>
            </value>
            <value>
                <fullName>147</fullName>
                <label>ARROW ECS (EX OPENWAY BO)</label>
            </value>
            <value>
                <fullName>177</fullName>
                <label>BANKIN</label>
            </value>
            <value>
                <fullName>205</fullName>
                <label>Bridge - DSP2</label>
            </value>
            <value>
                <fullName>210</fullName>
                <label>BROADBEAN</label>
            </value>
            <value>
                <fullName>127</fullName>
                <label>C3S Info - Baccara</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>CARLABELLA DI/DP RECURRENT</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>CARLABELLA RECURRENT</label>
            </value>
            <value>
                <fullName>145</fullName>
                <label>CARLABELLA SAAS</label>
            </value>
            <value>
                <fullName>174</fullName>
                <label>CAWEB</label>
            </value>
            <value>
                <fullName>154</fullName>
                <label>CDC FAST</label>
            </value>
            <value>
                <fullName>209</fullName>
                <label>Cecurity XRP Ultimate</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>CHORUS EDOC</label>
            </value>
            <value>
                <fullName>188</fullName>
                <label>CLEARNOX</label>
            </value>
            <value>
                <fullName>122</fullName>
                <label>COMPTANOO</label>
            </value>
            <value>
                <fullName>113</fullName>
                <label>COMPUTER ASSOCIATES RECURRENT</label>
            </value>
            <value>
                <fullName>215</fullName>
                <label>CONNECTIVE</label>
            </value>
            <value>
                <fullName>118</fullName>
                <label>CRIS / GOTO RECURRENT</label>
            </value>
            <value>
                <fullName>214</fullName>
                <label>CRONOFY</label>
            </value>
            <value>
                <fullName>161</fullName>
                <label>DOCLINK</label>
            </value>
            <value>
                <fullName>217</fullName>
                <label>DYNAMSOFT</label>
            </value>
            <value>
                <fullName>173</fullName>
                <label>EDECLARATION</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>