unpackaged/main/default/objects/Product2/fields/DeployID__c.field-meta.xml
<CustomField>
    <fullName>DeployID__c</fullName>
    <externalId>true</externalId>
    <label>DeployID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>