unpackaged/main/default/objects/Product2/fields/DirectIndirect_Product__c.field-meta.xml
<CustomField>
    <fullName>DirectIndirect_Product__c</fullName>
    <label>Direct/Indirect Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixed</fullName>
                <default>true</default>
                <label>Mixed</label>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>