unpackaged/main/default/objects/Product2/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>W-001838</description>
    <inlineHelpText>Used for Percentage or Amount Discount Charges.
For Percentage Discount, please enter 20 if you want to apply 20% discount.
For Amount Discount, please be careful about Product Currency to use.</inlineHelpText>
    <label>Discount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>