unpackaged/main/default/objects/Product2/fields/Educational_Document__c.field-meta.xml
<CustomField>
    <fullName>Educational_Document__c</fullName>
    <label>Educational Document</label>
    <type>Url</type>
</CustomField>