unpackaged/main/default/objects/Product2/fields/End_of_Commercialization__c.field-meta.xml
<CustomField>
    <fullName>End_of_Commercialization__c</fullName>
    <description>Date de fin de la commercialisation du produit</description>
    <inlineHelpText>Please note, the only event captured by the automation to modify the marketing status of the product in the future is the change from an empty value to a non-empty value.</inlineHelpText>
    <label>End of Commercialization</label>
    <type>Date</type>
</CustomField>