unpackaged/main/default/objects/Product2/fields/Eu_Custom_Code__c.field-meta.xml
<CustomField>
    <fullName>Eu_Custom_Code__c</fullName>
    <label>Eu Custom Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>