unpackaged/main/default/objects/Product2/fields/Excess_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>Excess_Pricing_Method__c</fullName>
    <label>Charge Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Excess_Pricing_Method</valueSetName>
    </valueSet>
</CustomField>