unpackaged/main/default/objects/Product2/fields/Excess_Unit_Price_Coeff__c.field-meta.xml
<CustomField>
    <fullName>Excess_Unit_Price_Coeff__c</fullName>
    <label>Excess Unit Price Coeff.</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>