unpackaged/main/default/objects/Product2/fields/First_Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>First_Subscription_Term__c</fullName>
    <description>W-1357</description>
    <label>First Subscription Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Default_Subscription_Term</valueSetName>
    </valueSet>
</CustomField>