unpackaged/main/default/objects/Product2/fields/Flux_SI__c.field-meta.xml
<CustomField>
    <fullName>Flux_SI__c</fullName>
    <label>Flux SI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Flux_SI</valueSetName>
    </valueSet>
</CustomField>