unpackaged/main/default/objects/Product2/fields/Full_Service__c.field-meta.xml
<CustomField>
    <fullName>Full_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>W-1357</description>
    <label>Full Service</label>
    <type>Checkbox</type>
</CustomField>