unpackaged/main/default/objects/Product2/fields/Functional_Level__c.field-meta.xml
<CustomField>
    <fullName>Functional_Level__c</fullName>
    <label>Functional Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_Level</valueSetName>
    </valueSet>
</CustomField>