unpackaged/main/default/objects/Product2/fields/Generates_Business_Remuneration__c.field-meta.xml
<CustomField>
    <fullName>Generates_Business_Remuneration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generates Business Remuneration</label>
    <type>Checkbox</type>
</CustomField>