unpackaged/main/default/objects/Product2/fields/Granted_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Granted_Waiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Granted Waiver</label>
    <type>Checkbox</type>
</CustomField>