unpackaged/main/default/objects/Product2/fields/Grouping_Code__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Code__c</fullName>
    <label>Grouping Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grouping_Code</valueSetName>
    </valueSet>
</CustomField>