unpackaged/main/default/objects/Product2/fields/HasBlockPrice__c.field-meta.xml
<CustomField>
    <fullName>HasBlockPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasBlockPrice</label>
    <type>Checkbox</type>
</CustomField>