unpackaged/main/default/objects/Product2/fields/id_buyme__c.field-meta.xml
<CustomField>
    <fullName>id_buyme__c</fullName>
    <label>Id Buyme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>