unpackaged/main/default/objects/Product2/fields/Included_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Included_Quantity__c</fullName>
    <label>Included Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>