unpackaged/main/default/objects/Product2/fields/Indirect_Product__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirect Product</label>
    <type>Checkbox</type>
</CustomField>