unpackaged/main/default/objects/Product2/fields/Internal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comment__c</fullName>
    <label>Internal Comment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>