unpackaged/main/default/objects/Product2/fields/InternalDescription__c.field-meta.xml
<CustomField>
    <fullName>InternalDescription__c</fullName>
    <label>Internal Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>