unpackaged/main/default/objects/Product2/fields/IsLicensesOrSaaS__c.field-meta.xml
<CustomField>
    <fullName>IsLicensesOrSaaS__c</fullName>
    <description>Field used to aggregate Saas and 	Licenses products in the same table when displayed in the Quote.</description>
    <formula>OR( ISPICKVAL( Family, 'Saas') ,ISPICKVAL( Family, 'Licenses') )</formula>
    <label>IsLicensesOrSaaS</label>
    <type>Checkbox</type>
</CustomField>