unpackaged/main/default/objects/Product2/fields/Lowest_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Lowest_Service_Level__c</fullName>
    <label>Lowest Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceLevel</valueSetName>
    </valueSet>
</CustomField>