unpackaged/main/default/objects/Product2/fields/Main_Charge_Product__c.field-meta.xml
<CustomField>
    <fullName>Main_Charge_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Charge Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Main Charge Product)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>