unpackaged/main/default/objects/Product2/fields/Manage_quantity__c.field-meta.xml
<CustomField>
    <fullName>Manage_quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manage quantity</label>
    <type>Checkbox</type>
</CustomField>