unpackaged/main/default/objects/Product2/fields/Marketing_Status__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Status__c</fullName>
    <description>Marketing Status</description>
    <label>Marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Status_Product</valueSetName>
    </valueSet>
</CustomField>