unpackaged/main/default/objects/Product2/fields/Max_Trainee__c.field-meta.xml
<CustomField>
    <fullName>Max_Trainee__c</fullName>
    <label>Max Trainee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>