unpackaged/main/default/objects/Product2/fields/Methodology__c.field-meta.xml
<CustomField>
    <fullName>Methodology__c</fullName>
    <description>W-001883 créer dans le cadre de TalentSoft</description>
    <label>Methodology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plug &amp; Play</fullName>
            </value>
            <value>
                <fullName>Adjust &amp; Play</fullName>
            </value>
            <value>
                <fullName>Customize &amp; Play</fullName>
            </value>
            <value>
                <fullName>Advanced Services</fullName>
            </value>
            <value>
                <fullName>Additional Services</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
            <value>
                <fullName>Quality Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>