unpackaged/main/default/objects/Product2/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <description>Metric</description>
    <label>Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Metric</valueSetName>
    </valueSet>
</CustomField>