unpackaged/main/default/objects/Product2/fields/Min_Trainee__c.field-meta.xml
<CustomField>
    <fullName>Min_Trainee__c</fullName>
    <label>Min Trainee</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>