unpackaged/main/default/objects/Product2/fields/New_Version_impacts_the_assets__c.field-meta.xml
<CustomField>
    <fullName>New_Version_impacts_the_assets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Version impacts the assets</label>
    <type>Checkbox</type>
</CustomField>