unpackaged/main/default/objects/Product2/fields/NoRoyalty__c.field-meta.xml
<CustomField>
    <fullName>NoRoyalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Royalty</label>
    <type>Checkbox</type>
</CustomField>