unpackaged/main/default/objects/Product2/fields/Offer_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Offer_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>