unpackaged/main/default/objects/Product2/fields/One_Time_Purchases__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Purchases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One-Time Purchases</label>
    <type>Checkbox</type>
</CustomField>