unpackaged/main/default/objects/Product2/fields/OPCA_Eligible__c.field-meta.xml
<CustomField>
    <fullName>OPCA_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPCA Eligible</label>
    <type>Checkbox</type>
</CustomField>