unpackaged/main/default/objects/Product2/fields/Operating_Typology__c.field-meta.xml
<CustomField>
    <fullName>Operating_Typology__c</fullName>
    <label>Operating Typology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operating_Typology</valueSetName>
    </valueSet>
</CustomField>