unpackaged/main/default/objects/Product2/fields/Partner_Solution_Product__c.field-meta.xml
<CustomField>
    <fullName>Partner_Solution_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Solution Product</label>
    <type>Checkbox</type>
</CustomField>