unpackaged/main/default/objects/Product2/fields/Partnership_Status__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Status__c</fullName>
    <label>Partnership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partnership_Status</valueSetName>
    </valueSet>
</CustomField>