unpackaged/main/default/objects/Product2/fields/PEI_Product__c.field-meta.xml
<CustomField>
    <fullName>PEI_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PEI Product</label>
    <type>Checkbox</type>
</CustomField>