unpackaged/main/default/objects/Product2/fields/percentage_of_turnover__c.field-meta.xml
<CustomField>
    <fullName>percentage_of_turnover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Percentage of turnover</label>
    <type>Checkbox</type>
</CustomField>