unpackaged/main/default/objects/Product2/fields/percentage_value_of_turnover__c.field-meta.xml
<CustomField>
    <fullName>percentage_value_of_turnover__c</fullName>
    <label>Percentage value of turnover</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>