unpackaged/main/default/objects/Product2/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <label>Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>