unpackaged/main/default/objects/Product2/fields/Planning_Type__c.field-meta.xml
<CustomField>
    <fullName>Planning_Type__c</fullName>
    <inlineHelpText>School value means you have grouped session of several clients, Flat Rate means that 
the client does not know the duration.</inlineHelpText>
    <label>Planning Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UNI</fullName>
                <label>Unitary</label>
            </value>
            <value>
                <fullName>ECO</fullName>
                <label>School</label>
            </value>
            <value>
                <fullName>FOR</fullName>
                <label>Flat Rate</label>
            </value>
            <value>
                <fullName>NON</fullName>
                <label>No Planning</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>