unpackaged/main/default/objects/Product2/fields/Possible_Billing_Modes__c.field-meta.xml
<CustomField>
    <fullName>Possible_Billing_Modes__c</fullName>
    <label>Possible Billing Modes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Mode</valueSetName>
    </valueSet>
</CustomField>