unpackaged/main/default/objects/Product2/fields/Price_Smoothing_Method__c.field-meta.xml
<CustomField>
    <fullName>Price_Smoothing_Method__c</fullName>
    <label>Price Smoothing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Price_Smoothing_Method</valueSetName>
    </valueSet>
</CustomField>