unpackaged/main/default/objects/Product2/fields/PricingModel__c.field-meta.xml
<CustomField>
    <fullName>PricingModel__c</fullName>
    <label>Pricing Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>Flat Rate + Overage</fullName>
            </value>
            <value>
                <fullName>Subscription + Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>