unpackaged/main/default/objects/Product2/fields/Product_code_serialization__c.field-meta.xml
<CustomField>
    <fullName>Product_code_serialization__c</fullName>
    <label>Product code serialization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>