unpackaged/main/default/objects/Product2/fields/Product_Family_Discount_Max_IC__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Discount_Max_IC__c</fullName>
    <description>Used to fill in the maximal discount allowed for each 'Product Line' value, for the Validation Group Level 2</description>
    <label>Product Line Discount Max - Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Discount_Max</valueSetName>
    </valueSet>
</CustomField>