unpackaged/main/default/objects/Product2/fields/Product_Name_Editable__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Name Editable</label>
    <type>Checkbox</type>
</CustomField>